YTDB-525: YTDB-556: Add JMH benchmarks, performance analysis, fix benchmark JVM flags
Add multi-threaded JMH benchmarks (MatchContendedBenchmark,
VertexTraversalMTBenchmark) and async-profiler harnesses for profiling
the state-lock separation changes.

Remove non-production JVM flags from jmh-ldbc exec:exec (-Dyoutrackdb.
storage.diskCache.bufferSize, -Dyoutrackdb.memory.directMemory.trackMode).
Document correct benchmark JVM flags in the Hetzner skill — previous runs
used test-mode flags (-ea, directMemory.trackMode=true, checksumMode=
StoreAndThrow) that added up to 60-70% overhead vs production.

Add docs/performance_analysis.md with full profiling results: CPU, alloc,
cache-miss profiles for ST and MT workloads on Hetzner CCX33.